@@ -407,7 +407,7 @@ class UsersModelUsers extends JModelList
 	//sqlsrv change
 	function _getUserDisplayedGroups($user_id)
 	{
-		$db = &JFactory::getDbo();
+		$db = JFactory::getDbo();
 		$sql = "SELECT title FROM ".$db->nameQuote('#__usergroups')." ug left join ".
 				$db->nameQuote('#__user_usergroup_map')." map on (ug.id = map.group_id)".
 				" WHERE map.user_id=".$user_id;
