@@ -27,11 +27,16 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+20-Dec-2011 Jean-Marie Simonet
+ # [#27416] *Strict in com_users
+ # [#27261] strict standards on initialise. Thanks Christophe
+
 19-Dec-2011 Jean-Marie Simonet
  # [#27011] Page Navigation rel next/prev back to front. Thanks James
  # [#27372] Configuration.php-dist for multi-db. Thanks Christophe.
  $ Updating installation ini file hu-HU
  $ Updating installation ini file pt-PT, ru-RU
+ + Adding da.gif for mod_languages
 
 
 19-Dec-2011 Mark Dexter
